design and templates

--- a/DCVExpert/Static/css/style_product.css
+++ b/DCVExpert/Static/css/style_product.css
@@ -1,169 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Gill Sans", sans-serif;
-    /* font-family: Arial, sans-serif; */
-}
-
-body {
-    width: auto;
-    background: #f8f9fa;
-    color: #000;
-    padding-top: 60px;
-}
-
-nav {
-    width: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px 5%;
-    background: white;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-}
-
-.logo_home {
-    font-size: 26px;
-    font-weight: bold;
-    /* color: #f8f9fa; */
-    color: #33cccc;
-
-    text-decoration: none;
-
-}
-
-.nab-bar {
-    /* background-color: #00103F; */
-    background-color: #0f1347;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 1000;
-}
-
-.nav-links {
-    list-style: none;
-    display: flex;
-}
-
-.nav-links li {
-    margin: 0 15px;
-    font-size: 20px;
-    font-family: "Gill Sans", sans-serif;
-}
-
-.nav-links a {
-    text-decoration: none;
-    color: #f8f9fa;
-    font-weight: 500px;
-
-}
-
-.nav-links a:hover,
-.nav-links a:focus,
-.nav-links a:active {
-    /* color: rgb(22, 12, 170); */
-    opacity: 0.75;
-}
-
-
-.buttons a {
-    margin-left: 30px;
-    padding: 10px 20px;
-    border: none;
-    cursor: pointer;
-    color: #f8f9fa;
-    font-size: 95%;
-    text-decoration: none;
-    /* position: relative; */
-}
-.buttons {
-    position: relative;
-}
-
-.login-window {
-    display: none; /* Ascunde fereastra inițial */
-    position: absolute;
-    top: 60px; /* Plasează fereastra sub navbar */
-    left: 0;
-    width: 300px; /* Lățimea feronetei */
-    background-color: #f1f1f1; /* Culoare de fundal */
-    border: 1px solid #ccc; /* Bordură pentru fereastră */
-    padding: 20px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1); /* Umbra pentru efect */
-    z-index: 10;
-    border-radius: 5px;
-}
-
-/* Fereastra devine vizibilă atunci când cursorul este pe butonul Login */
-.login:hover + .login-window {
-    display: block;
-}
-
-/* Stiluri pentru input și butonul din formular */
-.login-window input {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-}
-
-.login-window button {
-    width: 100%;
-    padding: 10px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.login-window button:hover {
-    background-color: #45a049;
-}
-
-
-.login {
-    /* background: transparent; */
-    /* background: #898989; */
-    background: #3bbebe;
-    border-radius: 5px;
-    /* font-weight:bold; */
-}
-
-.signup {
-    background: #3bbebe;
-    border-radius: 5px;
-    /* font-weight:bold; */
-}
-
-
-.signup:hover,
-.signup:focus,
-.signup:active {
-    /* color: rgb(22, 12, 170); */
-    /* opacity: 0.75; */
-    background: #33cccc;
-    transform: scale(1.05);
-    /* Mărește butonul cu 10% */
-    transition: transform 0.2s ease-in-out;
-    /*Face animația mai fluidă*/
-}
-
-.login:hover,
-.login:focus,
-.login:active {
-    /* color: rgb(22, 12, 170); */
-    /* opacity: 0.75; */
-    background: #33cccc;
-    transform: scale(1.05);
-    /* Mărește butonul cu 10% */
-    transition: transform 0.2s ease-in-out;
-    /*Face animația mai fluidă*/
-}
 
 .mine_product {
     /* width: 80%; */
@@ -235,7 +69,7 @@ nav {
 
 .product_price {
     font-size: 20px;
-    font-weight: bold;
+    /* font-weight: bold; */
     margin-bottom: 20px;
 }
 
@@ -276,14 +110,14 @@ nav {
 .product_info > * {
     padding: 10px;
 }
-.actual_price_value {
-    font-size: large;
-    color: #33cccc;
-    font-weight: bold;
-}
 .product_actual_price{
     font-weight: bold;
     margin-bottom: 20px;
+}
+.actual_price_value {
+    font-size: large;
+    color: #33cccc;
+    font-weight: normal;
 }
 .product_duration_time, .product_time {
     font-weight: bold;
@@ -469,240 +303,60 @@ ul li {
     .benefit_card{
         margin-bottom: 112px;
     }
-.join_us_form {
-    max-width: 80%;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center; /* Centrează conținutul pe orizontală */
-    text-align: center;
-    margin-bottom: 20px;
-}
 
-.join_us_form_wrap h2 {
-    font-weight: 500;
-    font-size: 35px;
-    line-height: 42px;
-    text-align: center;
-    margin-bottom: 15px;
-}
-
-.join_us_form_wrap p {
-    text-align: center;
-    line-height: 1.2;
-    margin-bottom: 20px;
-    padding: 0% 20% 0% 20%;
-}
-
-.join_us_form_form {
-    display: flex;
-    flex-direction: column;
-    align-items: center; /* Centrează inputurile */
-    gap: 15px;
-    width: 100%;
-}
-
-.join_us_form_input {
-    width: 35%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
-}
-
-.join_us_form_button {
-    padding: 12px 20px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    font-size: 16px;
-    cursor: pointer;
-    transition: background 0.3s ease;
-    margin-bottom: 10px;
-}
-
-.join_us_form_button:hover {
-    background-color: #0056b3;
-}
-
-.footer {
-    background-color: #00103F;
-    /* background-color: #00103F; */
-    color: white;
-    padding: 40px 0;
-}
-
-.footer_container {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 20px;
-}
-
-.footer_section {
-    flex: 1;
-    min-width: 250px;
-    margin: 20px;
-}
-
-.footer_section h3 {
-    font-size: 18px;
-    margin-bottom: 15px;
-    color: white;
-}
-
-.footer_section ul {
-    list-style: none;
-    padding: 0;
-}
-
-.footer_section ul li {
-    margin: 5px 0;
-}
-
-.footer_section ul li a {
-    color: white;
-    text-decoration: none;
-    transition: color 0.3s ease;
-}
-
-.footer_section ul li a:hover {
-    color: #33cccc;
-}
-
-.contact_info p {
-    font-size: 14px;
-    margin: 5px 0;
-}
-
-.newsletter p {
-    font-size: 14px;
-    margin-bottom: 15px;
-}
-
-.newsletter_form {
-    display: flex;
-    align-items: center;
-    background: white;
-    padding: 5px;
-    border-radius: 20px;
-}
-
-.newsletter_form {
-    display: flex;
-    align-items: center;
-    background: white;
-    border-radius: 25px;
-    overflow: hidden;
-    /* Asigură colțurile rotunjite */
-    width: 100%;
-    max-width: 400px;
-    /* Ajustează lățimea formularului */
-}
-
-.newsletter_form {
-    display: flex;
-    align-items: center;
-    background: white;
-    border-radius: 25px;
-    overflow: hidden;
-    /* Asigură colțurile rotunjite */
-    width: 100%;
-    max-width: 400px;
-    /* Ajustează lățimea formularului */
-}
-
-.newsletter_form input {
-    border: none;
-    padding: 2px 0px;
-    font-size: 14px;
-    flex: 1;
-    outline: none;
-    border-radius: 25px 0 0 25px;
-    height: 35px;
-    /* Asigură o înălțime fixă */
-}
-
-.newsletter_form button {
-    background-color: #D32F2F;
-    color: white;
-    border: none;
-    padding: 0 0px;
-    font-size: 11px;
-    border-radius: 25px 25px 25px 25px;
-    cursor: pointer;
-    transition: background 0.3s ease;
-    height: 35px;
-    /* Setăm aceeași înălțime ca input-ul */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    white-space: nowrap;
-    /* Previne tăierea textului */
-}
-
-.newsletter_form button:hover {
-    background-color: #B71C1C;
-}
-
-
-
-.footer_bottom {
-    text-align: center;
-    margin-top: 20px;
-    font-size: 14px;
-    border-top: 1px solid rgba(255, 255, 255, 0.2);
-    padding-top: 10px;
-}
-
-/* Ajustare pentru ecrane mai mici (sub 1024px) */
-@media screen and (max-width: 1024px) {
-    .Courses {
-        grid-template-columns: repeat(2, 1fr);
-    }
-
-    .cours_img {
-        width: 100%;
-        height: auto;
-    }
-}
-
-/* Ajustare pentru ecrane mai mici (sub 1024px) */
-
-/* Ajustare pentru telefoane (sub 768px) */
-@media screen and (max-width: 768px) {
-    body {
-        padding: 0px;
-    }
-
-    nav {
-        flex-direction: column;
-        padding: 10px;
-        /* position: relative; */
-    }
-
-    .nab-bar {
-        position: relative;
-    }
-
-    .nav-links {
-        flex-direction: column;
-        text-align: center;
-    }
-
-    .nav-links li {
-        margin: 10px 0;
-    }
-
-    .buttons {
+    .join_us_form {
+        max-width: 80%;
+        margin: 0 auto;
         display: flex;
-        justify-content: center;
-        width: 100%;
-        margin-top: 10px;
+        flex-direction: column;
+        align-items: center; /* Centrează conținutul pe orizontală */
+        text-align: center;
+        margin-bottom: 20px;
     }
-}
-
-/* Ajustare pentru telefoane (sub 768px) */
+    
+    .join_us_form_wrap h2 {
+        font-weight: 500;
+        font-size: 35px;
+        line-height: 42px;
+        text-align: center;
+        margin-bottom: 15px;
+    }
+    
+    .join_us_form_wrap p {
+        text-align: center;
+        line-height: 1.2;
+        margin-bottom: 20px;
+        padding: 0% 20% 0% 20%;
+    }
+    
+    .join_us_form_form {
+        display: flex;
+        flex-direction: column;
+        align-items: center; /* Centrează inputurile */
+        gap: 15px;
+        width: 100%;
+    }
+    
+    .join_us_form_input {
+        width: 35%;
+        padding: 12px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        font-size: 16px;
+    }
+    
+    .join_us_form_button {
+        padding: 12px 20px;
+        background-color: #007bff;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        font-size: 16px;
+        cursor: pointer;
+        transition: background 0.3s ease;
+        margin-bottom: 10px;
+    }
+    
+    .join_us_form_button:hover {
+        background-color: #0056b3;
+    }
