--- a/DCVExpert/Static/css/style_products.css
+++ b/DCVExpert/Static/css/style_products.css
@@ -1,167 +1,15 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Gill Sans", sans-serif;
-    /* font-family: Arial, sans-serif; */
-}
-
-body {
-	width: auto;
-    background: #f8f9fa;
-    color: #000;
-    padding-top: 60px;
-}
-
-nav {
-	width: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px 5%;
-    background: white;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-}
-
-.logo_home {
-    font-size: 26px;
-    font-weight: bold;
-    /* color: #f8f9fa; */
-    color: #33cccc;
-    
-    text-decoration: none;
-
-}
-
-.nab-bar
-{
-    /* background-color: #00103F; */
-    background-color: #0f1347;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 1000;
-}
-
-.nav-links {
-    list-style: none;
-    display: flex;
-}
-
-.nav-links li {
-    margin: 0 15px;
-	font-size: 20px;
-	font-family: "Gill Sans", sans-serif;
-}
-.nav-links a {
-    text-decoration: none;
-    color: #f8f9fa;
-    font-weight: 500px;
-
-}
-.nav-links a:hover, .nav-links a:focus, .nav-links a:active{
-	/* color: rgb(22, 12, 170); */
-	opacity: 0.75;
-}
-
-.buttons a {
-    margin-left: 30px;
-    padding: 10px 20px;
-    border: none;
-    cursor: pointer;
-    color: #f8f9fa;
-    font-size: 95%;
-    text-decoration: none;
-    /* position: relative; */
-}
-.buttons {
-    position: relative;
-}
-
-.login-window {
-    display: none; /* Ascunde fereastra inițial */
-    position: absolute;
-    top: 60px; /* Plasează fereastra sub navbar */
-    left: 0;
-    width: 300px; /* Lățimea feronetei */
-    background-color: #f1f1f1; /* Culoare de fundal */
-    border: 1px solid #ccc; /* Bordură pentru fereastră */
-    padding: 20px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1); /* Umbra pentru efect */
-    z-index: 10;
-    border-radius: 5px;
-}
-
-/* Fereastra devine vizibilă atunci când cursorul este pe butonul Login */
-.login:hover + .login-window {
-    display: block;
-}
-
-/* Stiluri pentru input și butonul din formular */
-.login-window input {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-}
-
-.login-window button {
-    width: 100%;
-    padding: 10px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.login-window button:hover {
-    background-color: #45a049;
-}
-
-.login {
-    /* background: transparent; */
-    /* background: #898989; */
-    background: #3bbebe;
-    border-radius: 5px;
-    /* font-weight:bold; */
-}
-
-.signup {
-    background: #3bbebe;
-    border-radius: 5px;
-    /* font-weight:bold; */
-}
-
-
-.signup:hover, .signup:focus, .signup:active{
-	/* color: rgb(22, 12, 170); */
-	/* opacity: 0.75; */
-    background: #33cccc;
-    transform: scale(1.05); /* Mărește butonul cu 10% */
-    transition: transform 0.2s ease-in-out; /*Face animația mai fluidă*/
-}
-.login:hover, .login:focus, .login:active{
-	/* color: rgb(22, 12, 170); */
-	/* opacity: 0.75; */
-    background: #33cccc;
-    transform: scale(1.05); /* Mărește butonul cu 10% */
-    transition: transform 0.2s ease-in-out; /*Face animația mai fluidă*/
-}
 .searchbar {
-	max-width: 80%;
+	max-width: 90%;
 	display: flex;
 	align-items: center;
 	background: #f8f9fa;
 	padding: 10px 20px;
 	border-radius: 5px;
 	margin: 0 auto;
-	justify-content: center;
+	justify-content: center;}
 	
 	/* margin-left: 30px; */
-}
+
 .row{
 	display: flex;
 	justify-content: space-between;
@@ -173,12 +21,16 @@ nav {
 .form-select{
 	/* border-radius: 5px; */
 	height: 40px;
-	width: 200px;
-	border: none;
+	width: 250px;
 	padding: 5px;
 	font-size: 16px;
 	outline: none;
 	margin-right: 10px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+}
+.form-select::focus  {
+    transition: transform 0.5s ease-in-out;
 }
 .jusify-content-center{
 	display: flex;
@@ -208,8 +60,8 @@ nav {
 	/* outline: none; */
 }
 .btn {
-	margin-left: 15px;
-	background: #3bbebe;
+	margin-left: 25px;
+	background: #24964f;
 	color: #f8f9fa;
 	border: none;
 	padding: 10px 20px;
@@ -218,13 +70,17 @@ nav {
 	font-size: 100%;
 	height: 40px;
 	width: 100px;
+    opacity: 0.8;
 }
-
+.btn:hover {
+    background: #177034;
+}
 .searchbar input {
-	border: none;
+	border: 1px solid #ccc;
 	padding: 5px;
-	font-size: 16px;
+	font-size: 18px;
 	outline: none;
+    border-radius: 8px;
 }
 .courses_section{
     /* width: 80%; */
@@ -241,7 +97,7 @@ nav {
 
 }
 .Courses{
-    max-width: 90%;
+    max-width: 95%;
     /* background-color: #fff; */
     margin: 0 auto;
     /* margin-top: 150px; */
@@ -261,8 +117,8 @@ nav {
     /* display: flex; */
 }
 .Cours{
-    max-width: 350px;
-	max-height: 600px;
+    /* max-width: 400px; */
+	max-height: 610px;
     /* margin-top: 50px; */
     background-color: #fff;
     box-shadow: 0px 3px 35px rgba(10, 18, 18, 0.507);
@@ -273,14 +129,16 @@ nav {
 
 }
 .cours_nam{
-    margin-top: 10px;
+    /* margin-top: 10px;
     margin-bottom: 10px; 
-    margin-left: 15px;   
+    margin-left: 15px;    */
+    padding: 5px 10px 10px 10px;
 }
 .cours_description{
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-bottom: 20px;   
+    /* margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;    */
+    padding: 5px 10px 10px 10px;
 }
 .cours_img {
 	margin: 0 ;
@@ -314,7 +172,7 @@ nav {
 }
 .cours_learn_more{
     border: 1px solid rgb(126, 124, 124);
-    padding: 3px;
+    padding: 5px;
     margin-left: 20px;
     display: inline-block;
     padding-right: 70px;
@@ -325,6 +183,7 @@ nav {
     background: url(../img/right-arrow.png) no-repeat 90% center;
     background-size: 40px 30px;
     transition:  .2 all;
+    border-radius: 8px;
 }
 
 .cours_learn_more:hover, .cours_learn_more:focus{
@@ -335,311 +194,57 @@ nav {
     margin-bottom: 20px;
 }
 .cours_price{
-    margin-left: 20px;
-    margin-bottom: 20px;
+    /* margin-left: 20px; */
+    /* margin-bottom: 20px; */
     display: flex; /* Centrează imaginea dacă e necesar */
+    justify-content: space-between;
+    align-items: left;
+    padding: 5px 140px 10px 30px;
     /* justify-content: center; */
 
 }
 .old_price{
     text-decoration: line-through;
     color: #a70e0e;
-    margin-right: 10px;
+    /* margin-right: 10px; */
 }
 .actual_price{
 	font-size: large;
     color: #33cccc;
-    margin-right: 10px;
-    font-weight: bold;
+    /* margin-right: 10px; */
+    /* font-weight: bold; */
 }
 
 .cours_details{
     font-size: 16px;
     color: #737373;
-    margin-left: 10px;
-    margin-bottom: 30px;
-    display: flex; /* Centrează imaginea dacă e necesar */
+    /* margin-left: 10px; */
+    /* padding: 15px 15px 15px 15px; */
+    /* margin-bottom: 20px; */
+    /* display: flex;  */
     /* justify-content: center; */
+    width: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px 50px 20px 30px;
 
 }
 .cours_details img{
-    max-width: 30px;
+    max-width: 50px;
     max-height: 30px;
-    padding-right: 10px;
+    /* padding-right: 10px; */
     /* justify-content: center; */
 }
 
-.cours_details p{
-    margin-right: 20px;
-}
 
-.Cours:hover , .Cours:focus{
-    transform: scale(1.01); /* Mărește butonul cu 1% */
-    transition: transform 0.2s ease-in-out; /*Face animația mai fluidă*/
-    border: 1px ridge #0d2872;
+.Cours:hover .Cours:focus{
+    transform: scale(1.1); 
+    transition: transform 0.2s ease-in-out; 
+    /* border: 1px ridge #35628f; */
 }
 
 .course_more:hover {
-    transform: scale(1.05);
+    transform: scale(1.1);
     transition: transform 0.1s ease-in-out; /* Face animația mai fluidă */
 }
-.footer {
-    background-color: #00103F;
-    /* background-color: #00103F; */
-    color: white;
-    padding: 40px 0;
-}
-
-.footer_container {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 20px;
-}
-
-.footer_section {
-    flex: 1;
-    min-width: 250px;
-    margin: 20px;
-}
-
-.footer_section h3 {
-    font-size: 18px;
-    margin-bottom: 15px;
-    color: white;
-}
-
-.footer_section ul {
-    list-style: none;
-    padding: 0;
-}
-
-.footer_section ul li {
-    margin: 5px 0;
-}
-
-.footer_section ul li a {
-    color: white;
-    text-decoration: none;
-    transition: color 0.3s ease;
-}
-
-.footer_section ul li a:hover {
-    color: #33cccc;
-}
-
-.contact_info p {
-    font-size: 14px;
-    margin: 5px 0;
-}
-
-.newsletter p {
-    font-size: 14px;
-    margin-bottom: 15px;
-}
-
-.newsletter_form {
-    display: flex;
-    align-items: center;
-    background: white;
-    padding: 5px;
-    border-radius: 20px;
-}
-
-.newsletter_form {
-    display: flex;
-    align-items: center;
-    background: white;
-    border-radius: 25px;
-    overflow: hidden; /* Asigură colțurile rotunjite */
-    width: 100%;
-    max-width: 400px; /* Ajustează lățimea formularului */
-}
-
-.newsletter_form {
-    display: flex;
-    align-items: center;
-    background: white;
-    border-radius: 25px;
-    overflow: hidden; /* Asigură colțurile rotunjite */
-    width: 100%;
-    max-width: 400px; /* Ajustează lățimea formularului */
-}
-
-.newsletter_form input {
-    border: none;
-    padding: 2px 0px;
-    font-size: 14px;
-    flex: 1;
-    outline: none;
-    border-radius: 25px 0 0 25px;
-    height: 35px; /* Asigură o înălțime fixă */
-}
-
-.newsletter_form button {
-    background-color: #D32F2F;
-    color: white;
-    border: none;
-    padding: 0 0px;
-    font-size: 11px;
-    border-radius: 25px 25px 25px 25px;
-    cursor: pointer;
-    transition: background 0.3s ease;
-    height: 35px; /* Setăm aceeași înălțime ca input-ul */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    white-space: nowrap; /* Previne tăierea textului */
-}
-
-.newsletter_form button:hover {
-    background-color: #B71C1C;
-}
-
-
-
-.footer_bottom {
-    text-align: center;
-    margin-top: 20px;
-    font-size: 14px;
-    border-top: 1px solid rgba(255, 255, 255, 0.2);
-    padding-top: 10px;
-}
-
-/* Ajustare pentru ecrane mai mici (sub 1024px) */
-@media screen and (max-width: 1024px) {
-    .hero-text {
-        width: 100%;
-        text-align: center;
-    }
-
-    .hero-text h1 {
-        font-size: 40px;
-    }
-
-    .hero-text p {
-        font-size: 18px;
-    }
-
-    .hero-buttons {
-        justify-content: center;
-    }
-
-    .hero-image img {
-        width: 100%;
-        height: auto;
-    }
-
-    .stats {
-        flex-direction: column;
-        align-items: center;
-        width: 100%;
-    }
-
-    .benefit_cards {
-        grid-template-columns: repeat(2, 1fr);
-    }
-
-    .Courses {
-        grid-template-columns: repeat(2, 1fr);
-    }
-
-    .cours_img {
-        width: 100%;
-        height: auto;
-    }
-}
-
-/* Ajustare pentru ecrane mai mici (sub 1024px) */
-
-/* Ajustare pentru telefoane (sub 768px) */
-@media screen and (max-width: 768px) {
-	body{
-		padding: 0px;
-	}
-    nav {
-        flex-direction: column;
-        padding: 10px;
-		/* position: relative; */
-    }
-	.nab-bar {
-        position: relative;
-    }
-
-    .nav-links {
-        flex-direction: column;
-        text-align: center;
-    }
-
-    .nav-links li {
-        margin: 10px 0;
-    }
-
-    .buttons {
-        display: flex;
-        justify-content: center;
-        width: 100%;
-        margin-top: 10px;
-    }
-
-    .hero {
-        flex-direction: column;
-        text-align: center;
-    }
-
-    .hero-text {
-        width: 100%;
-    }
-
-    .hero-buttons {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .start-trial, .how-it-works {
-        width: 80%;
-        margin: 10px 0;
-		text-decoration: none;
-    }
-
-    .stats {
-        flex-direction: column;
-        align-items: center;
-        width: 100%;
-    }
-
-    .benefit_cards {
-        grid-template-columns: repeat(1, 1fr);
-    }
-
-    .Courses {
-        grid-template-columns: repeat(1, 1fr);
-        padding: 0 20px;
-    }
-
-    .cours_img {
-        width: 100%;
-        height: auto;
-    }
-	.searchbar {
-		flex-direction: column;
-		align-items: center;
-		padding: 10px;
-	}
-
-	.input-group {
-		flex-direction: column;
-		width: 100%;
-	}
-
-	.form-control,
-	.form-select,
-	.btn {
-		width: 100%;
-		max-width: none;
-		margin-bottom: 5px;
-	}
-}
-/* Ajustare pentru telefoane (sub 768px) */
