design and templates

--- a/DCVExpert/Static/css/style_product.css
+++ b/DCVExpert/Static/css/style_product.css
@@ -24,7 +24,7 @@
     /* align-content: left; */
     width: 30vw;
     margin: 0 auto;
-
+    /* height: 30vw; */
     /* padding-left: 10%; */
     /* max-width: 650px; */
     /* max-height: 340px; */
