--- a/DCVExpert/Static/css/base.css
+++ b/DCVExpert/Static/css/base.css
@@ -27,7 +27,7 @@ nav {
     font-size: 26px;
     font-weight: bold;
     /* color: #f8f9fa; */
-    color: #d3d3d3f1;
+    color: #e4e4e4;
     
     text-decoration: none;
 
