--- a/DCVExpert/Static/css/base.css
+++ b/DCVExpert/Static/css/base.css
@@ -124,16 +124,60 @@ nav {
 }
 
 /* Stiluri pentru butoane */
-.login, .signup {
+.login, .signup, .logout {
     background: #24964f;
     border-radius: 5px;
     opacity: 0.90;
 }
 
-.signup:hover, .login:hover {
+.signup:hover, .login:hover, .logout:hover {
     background: #177039;
     transform: scale(1.05);
     transition: transform 0.2s ease-in-out;
+}
+/* Ascunde overlay-ul în mod implicit */
+.hidden {
+    display: none ;
+    visibility: hidden;
+}
+
+/* Adaugă efect de blur pentru conținut */
+.blurred {
+    filter: blur(5px);
+    pointer-events: none; /* Dezactivează interacțiunile */
+}
+/* Overlay care acoperă întreaga pagină */
+#loading-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.8); /* Alb semi-transparent */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999; /* Asigură-te că este deasupra tuturor elementelor */
+}
+
+/* Spinner-ul care se rotește */
+.spinner {
+    width: 50px;
+    height: 50px;
+    border: 5px solid rgba(0, 0, 0, 0.1); /* Margine semi-transparentă */
+    border-top: 5px solid #3498db; /* Marginea de sus colorată */
+    border-radius: 50%;
+    animation: spin 1s linear infinite; /* Animație de rotație */
+}
+
+/* Animația de rotație */
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 .footer {
