--- a/DCVExpert/Static/css/base.css
+++ b/DCVExpert/Static/css/base.css
@@ -123,14 +123,58 @@ nav {
     background-color: #24964f;
 }
 
+/* Fereastra login */
+.signin-window {
+    display: none;
+    position: absolute;
+    top: 90px;
+    left: auto;
+    width: 300px;
+    background-color: #f1f1f1;
+    border: 1px solid #ccc;
+    padding: 20px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    z-index: 10;
+    border-radius: 5px;
+}
+
+/* .login:hover + .login-window {
+    display: block;
+} */
+
+/* Stiluri pentru formular login */
+.signin-window input, .newsletter_form input {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+}
+
+.signin-window button {
+    width: 100%;
+    padding: 10px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.signin-window button:hover {
+    background-color: #24964f;
+}
+
+
+
 /* Stiluri pentru butoane */
-.login, .signup, .logout {
+.login, .signin, .logout {
     background: #24964f;
     border-radius: 5px;
     opacity: 0.90;
 }
 
-.signup:hover, .login:hover, .logout:hover {
+.signin:hover, .login:hover, .logout:hover {
     background: #177039;
     transform: scale(1.05);
     transition: transform 0.2s ease-in-out;
