--- a/DCVExpert/templates/DCVExpert/template_base.html
+++ b/DCVExpert/templates/DCVExpert/template_base.html
@@ -16,6 +16,7 @@
     <header class="header">
         <nav class="nab-bar">
             <div class="logo"><a href="{% url 'home' %}" class="logo_home">DCV Expert</a></div>
+            <div class="menu-toggle">☰</div>
             <ul class="nav-links">
                 <li><a href="{% url 'courses' %}">Oferte și reduceri</a></li>
                 <li><a href="#">Profesori</a></li>
