--- a/DCVExpert/Static/css/base.css
+++ b/DCVExpert/Static/css/base.css
@@ -35,7 +35,7 @@ nav {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
+    max-width: 100%;
     height: 80px;
     z-index: 1000;
     opacity: 0.80;
@@ -224,6 +224,9 @@ nav {
     }
 }
 
+
+
+
 .footer {
     background-color: #00103F;
     color: white;
@@ -322,6 +325,9 @@ nav {
     border-top: 1px solid rgba(255, 255, 255, 0.2);
     padding-top: 10px;
 }
+.menu-toggle{
+    display: none;
+}
 
 /* Ajustare pentru telefoane sub 768px */
 @media screen and (max-width: 768px) {
@@ -338,6 +344,19 @@ nav {
         flex-direction: column;
         text-align: center;
         margin-top: 10px;
+        /* border-top-right-radius: 25%; */
+        border-bottom-right-radius: 20%;
+    }
+    .nab-bar {
+        background-color: #35628f;
+        position: fixed;
+        top: 0;
+        left: 0;
+        max-width: 100%;
+        height: 80px;
+        z-index: 1000;
+        opacity: 0.80;
+        border-bottom-right-radius: 0px;
     }
 
     .nav-links li {
@@ -398,4 +417,30 @@ nav {
     .newsletter_form button {
         font-size: 12px;
     }
+    .nav-links, .buttons {
+        display: none; /* Ascunde meniul */
+        flex-direction: column;
+        width: 100%;
+        background: white;
+        position: absolute;
+        top: 50px;
+        left: 0;
+        padding: 10px;
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    .menu-toggle {
+        display: block; /* Afișează butonul */
+        font-size: 28px;
+        cursor: pointer;
+        color: #000;
+    }
+
+    .nav-active {
+        display: flex; /* Afișează meniul când e activ */
+        background-color: #35628f;
+    }
+
+
+
 }
